# hips_webgl_renderer

./: .gitignore  0.aladin.js  0.aladin.js.map  0.index.js  1.aladin.js  1.aladin.js.map  1.index.js  1.js  2.aladin.js  2.aladin.js.map  2.index.js  2.js  3.aladin.js  3.aladin.js.map  731.aladin.js  731.aladin.js.map  846.aladin.js  846.aladin.js.map  995.aladin.js  995.aladin.js.map  Cargo.toml  aladin.js  aladin.js.map  footprint.html  index-color-composite.html  index.html  index.js  main.js  package-lock.json  package.json  polyline.html  src_core_pkg-webgl1_index_js.aladin.js  src_core_pkg-webgl1_index_js.aladin.js.map  src_core_pkg-webgl2_index_js.aladin.js  src_core_pkg-webgl2_index_js.aladin.js.map  test_moc_moll.html  vendors-node_modules_fxpineau_healpix_healpix_js.aladin.js  vendors-node_modules_fxpineau_healpix_healpix_js.aladin.js.map  vendors-node_modules_text-encoding_index_js.aladin.js  vendors-node_modules_text-encoding_index_js.aladin.js.map
aladinlite-derive/: Cargo.toml
aladinlite-derive/src/: lib.rs
css/: styles.css
src/: .lib.rs.swp  binary_heap_tiles.rs  buffer_tiles.rs  event.rs  event_manager.rs  field_of_view.rs  healpix_cell.rs  lib.rs  math.rs  mesh.rs  mouse_inertia.rs  projeted_grid.rs  render_next_frame.rs  rotation.rs  shader.rs  texture.rs  utils.rs  viewport.rs
src/buffer/: async_workers.rs  buffer_tiles.rs  hips_config.rs  image.rs  mod.rs  texture.rs  textures.rs
src/core/: mod.rs  texture.rs  texture_array.rs
src/core/buffers/: array_buffer.rs  array_buffer_instanced.rs  buffer_data.rs  element_array_buffer.rs  vertex_array_object.rs
src/core/src/shaders/: mod.rs
src/finite_state_machine/: eventmanager.rs  inertia.rs  location.rs  mod.rs  mousemove.rs  moving.rs  zooming.rs
src/renderable/: array_buffer.rs  catalog.rs  colormap.rs  direct_system.rs  element_array_buffer.rs  grid.rs  hips_sphere.rs  mod.rs  orthographic_sphere.rs  projection.rs  rasterizer.rs  ray_tracer.rs  triangulation.rs  uv.rs  vertex_array_object.rs
src/renderable/buffers/: array_buffer.rs  array_buffer_instanced.rs  buffer_data.rs  element_array_buffer.rs  mod.rs  vertex_array_object.rs
src/shaders/: catalog.rs  catalog_frag.rs  catalog_vert.rs  colormap.rs  grid.rs  grid_frag.rs  grid_projeted_vert.rs  grid_vert.rs  heatmap_frag.rs  heatmap_vert.rs  hips_sphere_small_fov_frag.rs  hips_sphere_small_fov_vert.rs  mod.rs  proj_frag.rs  proj_vert.rs  rasterizer.rs  raytracer.rs  uniform_healpix_tiles.rs
src/shaders/catalogs/: aitoff.frag  mercator.frag  mercator.vert  ortho.frag
src/shaders/grid/: aitoff.frag  mercator.frag  mollweide.frag  ortho.frag
src/shaders/heatmap/: mod.rs
src/shaders/hips/: raytracer.frag
src/shaders/hips/rasterizer/: aitoff.frag  aitoff.vert  mercator.vert  mollweide.vert  ortho.vert
src/shaders/misc/: text.frag  text.vert
textures/: ang2pix_dxdy texture generation.ipynb
